--- a/app/src/main/res/layout/activity_burns.xml
+++ b/app/src/main/res/layout/activity_burns.xml
@@ -27,114 +27,109 @@
             android:orientation="vertical">
 
             <GridLayout
-                android:columnCount="1"
-                android:columnOrderPreserved="false"
-                android:rowCount="3"
-                android:alignmentMode="alignMargins"
-                android:layout_weight="12"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:padding="12dp">
-
-                <android.support.v7.widget.CardView
-                    android:layout_height="80dp"
-                    android:layout_width="0dp"
-                    android:layout_columnWeight="1"
-                    android:layout_rowWeight="1"
-                    android:layout_marginTop="4dp"
-                    android:layout_marginBottom="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
-                    app:cardElevation="6dp"
-                    app:cardCornerRadius="6dp"
-                    >
-
-                    <LinearLayout
-                        android:layout_gravity="center_horizontal|center_vertical"
-                        android:orientation="vertical"
-                        android:layout_margin="16dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
-
-                        <TextView
-                            android:text="Procedure"
-                            android:textAlignment="center"
-                            android:textColor="@color/colorPrimaryDark"
-                            android:textSize="25sp"
-                            android:textStyle="bold"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
-
-
-
-                    </LinearLayout>
-
-                </android.support.v7.widget.CardView>
+                android:layout_weight="12"
+                android:alignmentMode="alignMargins"
+                android:columnCount="1"
+                android:columnOrderPreserved="false"
+                android:padding="12dp"
+                android:rowCount="3">
 
                 <!-- Row 1 -->
                 <android.support.v7.widget.CardView
-                    android:layout_height="260dp"
                     android:layout_width="0dp"
+                    android:layout_height="wrap_content"
                     android:layout_columnWeight="1"
-                    android:layout_rowWeight="1"
+                    android:layout_marginBottom="6dp"
+                    android:layout_marginLeft="6dp"
+                    android:layout_marginRight="6dp"
                     android:layout_marginTop="4dp"
-                    android:layout_marginBottom="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
-                    app:cardElevation="6dp"
+                    android:layout_rowWeight="1"
                     app:cardCornerRadius="6dp"
-                    >
+                    app:cardElevation="6dp">
 
                     <LinearLayout
-                        android:layout_gravity="center_horizontal|center_vertical"
-                        android:orientation="vertical"
-                        android:layout_margin="16dp"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal|center_vertical"
+                        android:layout_margin="16dp"
+                        android:orientation="vertical">
 
                         <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
                             android:text="1st Degree\n  • Soaking the wound in cool water for five minutes or longer\n • Applying cream to soothe the skin \n • Using an antibiotic ointment and loose gauze to protect the affected area"
                             android:textAlignment="center"
                             android:textColor="@color/colorFont"
                             android:textSize="18sp"
-                            android:textStyle="bold"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
-
+                            android:textStyle="bold" />
 
 
                     </LinearLayout>
+
+                    <android.support.v7.widget.CardView
+                        android:layout_width="0dp"
+                        android:layout_height="80dp"
+                        android:layout_columnWeight="1"
+                        android:layout_marginBottom="16dp"
+                        android:layout_marginLeft="6dp"
+                        android:layout_marginRight="6dp"
+                        android:layout_marginTop="4dp"
+                        android:layout_rowWeight="1"
+                        app:cardCornerRadius="6dp"
+                        app:cardElevation="6dp">
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal|center_vertical"
+                            android:layout_margin="16dp"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Procedure"
+                                android:textAlignment="center"
+                                android:textColor="@color/colorPrimaryDark"
+                                android:textSize="25sp"
+                                android:textStyle="bold" />
+
+
+                        </LinearLayout>
+
+                    </android.support.v7.widget.CardView>
 
                 </android.support.v7.widget.CardView>
 
                 <!-- Row 2 -->
                 <android.support.v7.widget.CardView
-                    android:layout_height="220dp"
                     android:layout_width="0dp"
+                    android:layout_height="wrap_content"
                     android:layout_columnWeight="1"
-                    android:layout_rowWeight="1"
                     android:layout_marginBottom="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
-                    app:cardElevation="6dp"
+                    android:layout_marginLeft="6dp"
+                    android:layout_marginRight="6dp"
+                    android:layout_rowWeight="1"
                     app:cardCornerRadius="6dp"
-                    >
+                    app:cardElevation="6dp">
                     <!-- Row 2 -->
                     <LinearLayout
-                        android:layout_gravity="center_horizontal|center_vertical"
-                        android:orientation="vertical"
-                        android:layout_margin="16dp"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal|center_vertical"
+                        android:layout_margin="16dp"
+                        android:orientation="vertical">
 
                         <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
                             android:text="2nd Degree\n • Running the skin under cool water for 15 minutes or longer\n • Taking over-the-counter pain medication\n • Applying antibiotic cream to blisters"
                             android:textAlignment="center"
                             android:textColor="@color/colorFont"
                             android:textSize="18sp"
-                            android:textStyle="bold"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
+                            android:textStyle="bold" />
 
 
                     </LinearLayout>
@@ -143,66 +138,64 @@
 
                 <!-- Row 3 -->
                 <android.support.v7.widget.CardView
-                    android:layout_height="150dp"
                     android:layout_width="0dp"
+                    android:layout_height="wrap_content"
                     android:layout_columnWeight="2"
-                    android:layout_rowWeight="2"
                     android:layout_marginBottom="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
-                    app:cardElevation="6dp"
+                    android:layout_marginLeft="6dp"
+                    android:layout_marginRight="6dp"
+                    android:layout_rowWeight="2"
                     app:cardCornerRadius="6dp"
-                    >
+                    app:cardElevation="6dp">
 
                     <LinearLayout
-                        android:layout_gravity="center_horizontal|center_vertical"
-                        android:orientation="vertical"
-                        android:layout_margin="16dp"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal|center_vertical"
+                        android:layout_margin="16dp"
+                        android:orientation="vertical">
 
                         <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
                             android:text="3rd Degree\n • Never Attempt to treat a Third Degree burn\n • Press Emergency Button Immediately"
                             android:textAlignment="center"
                             android:textColor="@color/colorFont"
                             android:textSize="18sp"
-                            android:textStyle="bold"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
+                            android:textStyle="bold" />
 
 
                     </LinearLayout>
 
                 </android.support.v7.widget.CardView>
+
                 <android.support.v7.widget.CardView
-                    android:layout_height="80dp"
                     android:layout_width="0dp"
+                    android:layout_height="80dp"
                     android:layout_columnWeight="1"
-                    android:layout_rowWeight="1"
-                    android:layout_marginTop="4dp"
                     android:layout_marginBottom="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
-                    app:cardElevation="6dp"
+                    android:layout_marginLeft="6dp"
+                    android:layout_marginRight="6dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_rowWeight="1"
                     app:cardCornerRadius="6dp"
-                    >
+                    app:cardElevation="6dp">
 
                     <LinearLayout
-                        android:layout_gravity="center_horizontal|center_vertical"
-                        android:orientation="vertical"
-                        android:layout_margin="16dp"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal|center_vertical"
+                        android:layout_margin="16dp"
+                        android:orientation="vertical">
 
                         <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
                             android:text="Symptoms"
                             android:textAlignment="center"
                             android:textColor="@color/colorPrimaryDark"
                             android:textSize="25sp"
-                            android:textStyle="bold"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
-
+                            android:textStyle="bold" />
 
 
                     </LinearLayout>
