--- a/app/src/main/res/layout/activity_cpr.xml
+++ b/app/src/main/res/layout/activity_cpr.xml
@@ -38,14 +38,14 @@
                 android:padding="12dp">
 
                 <android.support.v7.widget.CardView
-                    android:layout_height="80dp"
+                    android:layout_height="wrap_content"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
                     android:layout_rowWeight="1"
                     android:layout_marginTop="4dp"
                     android:layout_marginBottom="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
+                    android:layout_marginLeft="6dp"
+                    android:layout_marginRight="6dp"
                     app:cardElevation="6dp"
                     app:cardCornerRadius="6dp"
                     >
@@ -74,14 +74,14 @@
 
                 <!-- Row 1 -->
                 <android.support.v7.widget.CardView
-                    android:layout_height="140dp"
+                    android:layout_height="wrap_content"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
                     android:layout_rowWeight="1"
                     android:layout_marginTop="4dp"
                     android:layout_marginBottom="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
+                    android:layout_marginLeft="6dp"
+                    android:layout_marginRight="6dp"
                     app:cardElevation="6dp"
                     app:cardCornerRadius="6dp"
                     >
@@ -110,13 +110,13 @@
 
                 <!-- Row 2 -->
                 <android.support.v7.widget.CardView
-                    android:layout_height="130dp"
+                    android:layout_height="wrap_content"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
                     android:layout_rowWeight="1"
                     android:layout_marginBottom="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
+                    android:layout_marginLeft="6dp"
+                    android:layout_marginRight="6dp"
                     app:cardElevation="6dp"
                     app:cardCornerRadius="6dp"
                     >
@@ -144,13 +144,13 @@
 
                 <!-- Row 3 -->
                 <android.support.v7.widget.CardView
-                    android:layout_height="120dp"
+                    android:layout_height="wrap_content"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
                     android:layout_rowWeight="1"
                     android:layout_marginBottom="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
+                    android:layout_marginLeft="6dp"
+                    android:layout_marginRight="6dp"
                     app:cardElevation="6dp"
                     app:cardCornerRadius="6dp"
                     >
@@ -178,13 +178,13 @@
 
                 <!-- Row 4 -->
                 <android.support.v7.widget.CardView
-                    android:layout_height="150dp"
+                    android:layout_height="wrap_content"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
                     android:layout_rowWeight="1"
                     android:layout_marginBottom="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
+                    android:layout_marginLeft="6dp"
+                    android:layout_marginRight="6dp"
                     app:cardElevation="6dp"
                     app:cardCornerRadius="6dp"
                     >
@@ -212,13 +212,13 @@
 
                 <!-- Row 5 -->
                 <android.support.v7.widget.CardView
-                    android:layout_height="160dp"
+                    android:layout_height="wrap_content"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
                     android:layout_rowWeight="1"
                     android:layout_marginBottom="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
+                    android:layout_marginLeft="6dp"
+                    android:layout_marginRight="6dp"
                     app:cardElevation="6dp"
                     app:cardCornerRadius="6dp"
                     >
@@ -245,14 +245,13 @@
                 </android.support.v7.widget.CardView>
 
                 <android.support.v7.widget.CardView
-                    android:layout_height="80dp"
+                    android:layout_height="wrap_content"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
-                    android:layout_rowWeight="1"
                     android:layout_marginTop="4dp"
                     android:layout_marginBottom="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
+                    android:layout_marginLeft="6dp"
+                    android:layout_marginRight="6dp"
                     app:cardElevation="6dp"
                     app:cardCornerRadius="6dp"
                     >
