--- a/app/src/main/res/layout/activity_flu.xml
+++ b/app/src/main/res/layout/activity_flu.xml
@@ -37,14 +37,13 @@
                 android:padding="12dp">
 
                 <android.support.v7.widget.CardView
-                    android:layout_height="80dp"
+                    android:layout_height="wrap_content"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
-                    android:layout_rowWeight="1"
                     android:layout_marginTop="4dp"
                     android:layout_marginBottom="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
+                    android:layout_marginLeft="6dp"
+                    android:layout_marginRight="6dp"
                     app:cardElevation="6dp"
                     app:cardCornerRadius="6dp"
                     >
@@ -73,14 +72,13 @@
 
                 <!-- Row 1 -->
                 <android.support.v7.widget.CardView
-                    android:layout_height="80dp"
+                    android:layout_height="wrap_content"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
-                    android:layout_rowWeight="1"
                     android:layout_marginTop="4dp"
                     android:layout_marginBottom="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
+                    android:layout_marginLeft="6dp"
+                    android:layout_marginRight="6dp"
                     app:cardElevation="6dp"
                     app:cardCornerRadius="6dp"
                     >
@@ -109,13 +107,12 @@
 
                 <!-- Row 2 -->
                 <android.support.v7.widget.CardView
-                    android:layout_height="80dp"
+                    android:layout_height="wrap_content"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
-                    android:layout_rowWeight="1"
                     android:layout_marginBottom="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
+                    android:layout_marginLeft="6dp"
+                    android:layout_marginRight="6dp"
                     app:cardElevation="6dp"
                     app:cardCornerRadius="6dp"
                     >
@@ -143,13 +140,12 @@
 
                 <!-- Row 3 -->
                 <android.support.v7.widget.CardView
-                    android:layout_height="80dp"
+                    android:layout_height="wrap_content"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
-                    android:layout_rowWeight="1"
                     android:layout_marginBottom="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
+                    android:layout_marginLeft="6dp"
+                    android:layout_marginRight="6dp"
                     app:cardElevation="6dp"
                     app:cardCornerRadius="6dp"
                     >
@@ -177,13 +173,12 @@
 
                 <!-- Row 4 -->
                 <android.support.v7.widget.CardView
-                    android:layout_height="80dp"
+                    android:layout_height="wrap_content"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
-                    android:layout_rowWeight="1"
                     android:layout_marginBottom="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
+                    android:layout_marginLeft="6dp"
+                    android:layout_marginRight="6dp"
                     app:cardElevation="6dp"
                     app:cardCornerRadius="6dp"
                     >
@@ -211,13 +206,12 @@
 
                 <!-- Row 5 -->
                 <android.support.v7.widget.CardView
-                    android:layout_height="80dp"
+                    android:layout_height="wrap_content"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
-                    android:layout_rowWeight="1"
                     android:layout_marginBottom="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
+                    android:layout_marginLeft="6dp"
+                    android:layout_marginRight="6dp"
                     app:cardElevation="6dp"
                     app:cardCornerRadius="6dp"
                     >
@@ -243,14 +237,13 @@
 
                 </android.support.v7.widget.CardView>
                 <android.support.v7.widget.CardView
-                    android:layout_height="80dp"
+                    android:layout_height="wrap_content"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
-                    android:layout_rowWeight="1"
                     android:layout_marginTop="4dp"
                     android:layout_marginBottom="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
+                    android:layout_marginLeft="6dp"
+                    android:layout_marginRight="6dp"
                     app:cardElevation="6dp"
                     app:cardCornerRadius="6dp"
                     >
