--- a/app/src/main/res/layout/activity_punctures.xml
+++ b/app/src/main/res/layout/activity_punctures.xml
@@ -38,14 +38,13 @@
                 android:padding="12dp">
 
                 <android.support.v7.widget.CardView
-                    android:layout_height="80dp"
+                    android:layout_height="wrap_content"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
-                    android:layout_rowWeight="1"
                     android:layout_marginTop="4dp"
                     android:layout_marginBottom="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
+                    android:layout_marginLeft="6dp"
+                    android:layout_marginRight="6dp"
                     app:cardElevation="6dp"
                     app:cardCornerRadius="6dp"
                     >
@@ -74,14 +73,13 @@
 
                 <!-- Row 1 -->
                 <android.support.v7.widget.CardView
-                    android:layout_height="130dp"
+                    android:layout_height="wrap_content"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
-                    android:layout_rowWeight="1"
                     android:layout_marginTop="4dp"
                     android:layout_marginBottom="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
+                    android:layout_marginLeft="6dp"
+                    android:layout_marginRight="6dp"
                     app:cardElevation="6dp"
                     app:cardCornerRadius="6dp"
                     >
@@ -110,13 +108,12 @@
 
                 <!-- Row 2 -->
                 <android.support.v7.widget.CardView
-                    android:layout_height="110dp"
+                    android:layout_height="wrap_content"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
-                    android:layout_rowWeight="1"
                     android:layout_marginBottom="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
+                    android:layout_marginLeft="6dp"
+                    android:layout_marginRight="6dp"
                     app:cardElevation="6dp"
                     app:cardCornerRadius="6dp"
                     >
@@ -144,13 +141,12 @@
 
                 <!-- Row 3 -->
                 <android.support.v7.widget.CardView
-                    android:layout_height="190dp"
+                    android:layout_height="wrap_content"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
-                    android:layout_rowWeight="1"
                     android:layout_marginBottom="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
+                    android:layout_marginLeft="6dp"
+                    android:layout_marginRight="6dp"
                     app:cardElevation="6dp"
                     app:cardCornerRadius="6dp"
                     >
@@ -178,13 +174,12 @@
 
                 <!-- Row 4 -->
                 <android.support.v7.widget.CardView
-                    android:layout_height="180dp"
+                    android:layout_height="wrap_content"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
-                    android:layout_rowWeight="1"
                     android:layout_marginBottom="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
+                    android:layout_marginLeft="6dp"
+                    android:layout_marginRight="6dp"
                     app:cardElevation="6dp"
                     app:cardCornerRadius="6dp"
                     >
@@ -212,13 +207,12 @@
 
                 <!-- Row 5 -->
                 <android.support.v7.widget.CardView
-                    android:layout_height="130dp"
+                    android:layout_height="wrap_content"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
-                    android:layout_rowWeight="1"
                     android:layout_marginBottom="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
+                    android:layout_marginLeft="6dp"
+                    android:layout_marginRight="6dp"
                     app:cardElevation="6dp"
                     app:cardCornerRadius="6dp"
                     >
@@ -244,14 +238,13 @@
 
                 </android.support.v7.widget.CardView>
                 <android.support.v7.widget.CardView
-                    android:layout_height="80dp"
+                    android:layout_height="wrap_content"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
-                    android:layout_rowWeight="1"
                     android:layout_marginTop="4dp"
                     android:layout_marginBottom="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
+                    android:layout_marginLeft="6dp"
+                    android:layout_marginRight="6dp"
                     app:cardElevation="6dp"
                     app:cardCornerRadius="6dp"
                     >
