--- a/app/src/main/res/layout/activity_splinters.xml
+++ b/app/src/main/res/layout/activity_splinters.xml
@@ -38,14 +38,13 @@
                 android:padding="12dp">
 
                 <android.support.v7.widget.CardView
-                    android:layout_height="80dp"
+                    android:layout_height="wrap_content"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
-                    android:layout_rowWeight="1"
                     android:layout_marginTop="4dp"
                     android:layout_marginBottom="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
+                    android:layout_marginLeft="6dp"
+                    android:layout_marginRight="6dp"
                     app:cardElevation="6dp"
                     app:cardCornerRadius="6dp"
                     >
@@ -74,14 +73,13 @@
 
                 <!-- Row 1 -->
                 <android.support.v7.widget.CardView
-                    android:layout_height="80dp"
+                    android:layout_height="wrap_content"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
-                    android:layout_rowWeight="1"
                     android:layout_marginTop="4dp"
                     android:layout_marginBottom="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
+                    android:layout_marginLeft="6dp"
+                    android:layout_marginRight="6dp"
                     app:cardElevation="6dp"
                     app:cardCornerRadius="6dp"
                     >
@@ -110,13 +108,12 @@
 
                 <!-- Row 2 -->
                 <android.support.v7.widget.CardView
-                    android:layout_height="80dp"
+                    android:layout_height="wrap_content"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
-                    android:layout_rowWeight="1"
                     android:layout_marginBottom="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
+                    android:layout_marginLeft="6dp"
+                    android:layout_marginRight="6dp"
                     app:cardElevation="6dp"
                     app:cardCornerRadius="6dp"
                     >
@@ -145,13 +142,12 @@
 
                 <!-- Row 3 -->
                 <android.support.v7.widget.CardView
-                    android:layout_height="120dp"
+                    android:layout_height="wrap_content"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
-                    android:layout_rowWeight="1"
                     android:layout_marginBottom="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
+                    android:layout_marginLeft="6dp"
+                    android:layout_marginRight="6dp"
                     app:cardElevation="6dp"
                     app:cardCornerRadius="6dp"
                     >
@@ -179,13 +175,12 @@
 
                 <!-- Row 4 -->
                 <android.support.v7.widget.CardView
-                    android:layout_height="80dp"
+                    android:layout_height="wrap_content"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
-                    android:layout_rowWeight="1"
                     android:layout_marginBottom="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
+                    android:layout_marginLeft="6dp"
+                    android:layout_marginRight="6dp"
                     app:cardElevation="6dp"
                     app:cardCornerRadius="6dp"
                     >
@@ -211,14 +206,13 @@
 
                 </android.support.v7.widget.CardView>
                 <android.support.v7.widget.CardView
-                    android:layout_height="80dp"
+                    android:layout_height="wrap_content"
                     android:layout_width="0dp"
                     android:layout_columnWeight="1"
-                    android:layout_rowWeight="1"
                     android:layout_marginTop="4dp"
                     android:layout_marginBottom="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
+                    android:layout_marginLeft="6dp"
+                    android:layout_marginRight="6dp"
                     app:cardElevation="6dp"
                     app:cardCornerRadius="6dp"
                     >
